--- a/diapos/SFCR_ConceptosGenerales.org
+++ b/diapos/SFCR_ConceptosGenerales.org
@@ -3,7 +3,9 @@
 #+SETUPFILE: config.org
 #+OPTIONS: H:3
 
-* Conceptos Generales
+* Sistemas Fotovoltaicos de Conexión a Red
+
+** Definición
 
 *** Definición de un SFCR
 
@@ -13,43 +15,39 @@ poder ser inyectada en la red convencional.
 
 [[../figs/EsquemaSFCR.pdf]]
 
+** Mecanismos de Retribución
 *** Mecanismos de retribución
 
-La energía producida por este sistema será consumida parcial o
-totalmente en las cercanías, y la energía sobrante será inyectada en la
-red para su distribución a otros puntos de consumo.
+- La energía producida por este sistema será consumida parcial o totalmente en las cercanías, y la energía sobrante será inyectada en la red para su distribución a otros puntos de consumo.
 
-Mecanismos de retribución
+- Mecanismos de retribución
 
--  Prima (/Feed-in tariff/)
+  - Prima (/Feed-in tariff/)
 
--  Balance neto (/Net-metering/)
+  - Balance neto (/Net-metering/)
 
 *** Retribución con prima
 
--  Ingresos por la energía total producida (independientemente de la que
+-  *Ingresos* por la *energía total producida* (independientemente de la que
    haya sido consumida en las cercanías del SFCR).
 
--  El diseño no necesita considerar un consumo a satisfacer.
+-  El diseño *no necesita considerar un consumo* a satisfacer.
 
--  Objetivo: producción anual del sistema sea la máxima posible sin
+-  *Objetivo*: producción anual del sistema sea la máxima posible sin
    tomar en consideración los consumos cercanos.
 
 *** Balance neto
 
--  Compensa los saldos de energía eléctrica entre el SFCR y un sistema
-   de consumo asociado.
+-  *Compensa los saldos de energía eléctrica* entre el SFCR y un sistema de consumo asociado.
 
--  Cuando la producción del SFCR supera al consumo, la red eléctrica
-   absorbe el excedente puntual, generándose derechos de consumo
-   diferido.
+-  Cuando la producción del SFCR supera al consumo, la red eléctrica absorbe el excedente puntual, generándose derechos de consumo diferido.
+ 
+-  Estos derechos de consumo se pueden ejercer cuando la producción del SFCR no es suficiente para satisfacer el consumo asociado.
 
--  Estos derechos de consumo se pueden ejercer cuando la producción del
-   SFCR no es suficiente para satisfacer el consumo asociado.
+-  El *diseño debe incluir el consumo asociado* como una /variable adicional/ que condicionará el tamaño del generador fotovoltaico.
 
--  El diseño debe incluir el consumo asociado como una variable
-   adicional que condicionará el tamaño del generador fotovoltaico.
 
+** SFCR en suelo y en edificación
 *** Características distintivas sobre suelo y en edificación
 
 -  *Sobre suelo*
@@ -69,6 +67,7 @@ Mecanismos de retribución
    -  Integración arquitectónica: doble función energética y
       arquitectónica; sustituyen elementos constructivos convencionales
       o son elementos constituyentes de la composición arquitectónica
+
 
 *** SFCR sobre suelo
 
@@ -139,13 +138,9 @@ Mecanismos de retribución
 
 *** SFCR en edificación
 
-La integración del sistema fotovoltaico con el edificio exige tener en
-cuenta muchos factores que condicionan la ubicación y la configuración
-del generador.
+- La integración del sistema fotovoltaico con el edificio exige tener en cuenta muchos factores que condicionan la ubicación y la configuración del generador.
 
-El diseñador debe tomar las decisiones oportunas para *aprovechar las
-sinergias entre edificio y sistema fotovoltaico*, reduciendo las
-posibles interferencias entre uno y otro.
+- El diseñador debe tomar las decisiones oportunas para *aprovechar las sinergias entre edificio y sistema fotovoltaico*, reduciendo las posibles interferencias entre uno y otro.
 
 [[http://www.pvdatabase.org/]]
 
@@ -169,122 +164,76 @@ posibles interferencias entre uno y otro.
 
 *** SFCR en edificación: CTE-HE5
 
-Zonas climáticas
+- El CTE-HTE5 divide España en cinco zonas climáticas de acuerdo al valor medio anual de la radiación global diaria en el plano horizontal.
 
-Este documento divide España en cinco zonas climáticas de acuerdo al
-valor medio anual de la radiación global diaria en el plano horizontal.
+- Por ejemplo, toda la cornisa cantábrica está encuadrada en la zona I (radiación inferior a $\SI{3.8}{\kWh\per\meter\squared}$) mientras que
+Canarias y parte de Andalucía pertenecen a la zona V (radiación superior a $\SI{5}{\kWh\per\meter\squared}$) .
 
-Por ejemplo, toda la cornisa cantábrica está encuadrada en la zona I
-(radiación inferior a $\SI{3.8}{\kWh\per\meter\squared}$) mientras que
-Canarias y parte de Andalucía pertenecen a la zona V (radiación superior
-a $\SI{5}{\kWh\per\meter\squared}$) .
+- Este Código aboga por instalar mayor potencia en las zonas con mayor radiación.
 
-Este Código aboga por instalar mayor potencia en las zonas con mayor
-radiación.
+*** SFCR en edificación: CTE-HE5
 
-*** SFCR en edificación: CTE
-
-Potencia *nominal* a instalar
+- Potencia *nominal* a instalar
 
 $$P_{min}=C\cdot(0.002\cdot S - 5)$$
 
--  Esta potencia debe ser superior a $\SI{5}{\kilo\watt}$ e inferior a
-   $\SI{100}{\kilo\watt}$.
+-  Esta potencia debe ser superior a $\SI{5}{\kilo\watt}$ e inferior a $\SI{100}{\kilo\watt}$.
 
 -  $C=1$ para zona climática I, $C=1.4$ para zona climática V.
 
 -  Aplica sólo cuando $S > \SI{5000}{\meter\squared}$.
 
-*** SFCR en edificación
+** Condiciones técnicas de la conexión
 
-Sistemas Eléctricos
+*** SFCR en Edificación: sistemas eléctricos
 
-En este tipo de SFCR el diseño de los sistemas eléctricos debe tener en
-cuenta las canalizaciones previstas o existentes en el edificio. Por
-facilidad de instalación y mantenimiento, y por seguridad de los
-sistemas, es recomendable el uso de canalizaciones separadas del resto
-de sistemas del edificio.
+- En este tipo de SFCR el diseño de los sistemas eléctricos debe tener en cuenta las canalizaciones previstas o existentes en el edificio. Por facilidad de instalación y mantenimiento, y por seguridad de los sistemas, es recomendable el uso de canalizaciones separadas del resto de sistemas del edificio.
 
-Sin embargo, los criterios de seguridad eléctrica aconsejan utilizar una
-*red de tierras común* para el edificio y el sistema fotovoltaico.
+- Sin embargo, los criterios de seguridad eléctrica aconsejan utilizar una *red de tierras común* para el edificio y el sistema fotovoltaico.
 
-*** Condiciones técnicas de la conexión
+*** Separación entre comercialización y generación
+-  El propietario de un generador fotovoltaico puede vender a una compañia eléctrica toda la energía que produce su sistema, no sólo la que le sobra (diferencia entre la producción de su sistema y el consumo de, por ejemplo, su domicilio).
 
--  El propietario de un generador fotovoltaico puede vender a una
-   compañia eléctrica toda la energía que produce su sistema, no sólo la
-   que le sobra (diferencia entre la producción de su sistema y el
-   consumo de, por ejemplo, su domicilio).
+-  La reglamentación eléctrica española establece la separación administrativa entre la comercialización y la distribución de la energía (así, la empresa que nos vende energía eléctrica en nuestro hogar es distinta a la que compra la energía que produce el sistema que podamos tener en nuestro tejado).
 
--  La reglamentación eléctrica española establece la separación
-   administrativa entre la comercialización y la distribución de la
-   energía (así, la empresa que nos vende energía eléctrica en nuestro
-   hogar es distinta a la que compra la energía que produce el sistema
-   que podamos tener en nuestro tejado).
+*** Generación distribuida
 
-*** Condiciones técnicas de la conexión
+-  Por tanto, al menos administrativamente, la generación fotovoltaica y el consumo cercano son dos elementos independientes.
 
--  Por tanto, al menos administrativamente, la generación fotovoltaica y
-   el consumo cercano son dos elementos independientes.
+-  No obstante, es claro que la corriente eléctrica no entiende de leyes ni contratos, sino que fluye según las leyes de Kirchhoff.
 
--  No obstante, es claro que la corriente eléctrica no entiende de leyes
-   ni contratos, sino que fluye según las leyes de Kirchhoff.
+-  Así, la energía producida por un SFCR será consumida parcial o totalmente en el propio edificio (generación distribuida).
 
--  Así, la energía producida por un SFCR será consumida parcial o
-   totalmente en el propio edificio (generación distribuida).
+*** El problema de la medida
 
-*** Condiciones técnicas de la conexión
+-  La separación existente entre empresa comercializadora y empresa distribuidora se refleja en la separación de contratos y facturas, y por tanto, también de elementos y puntos de medida.
 
--  La separación existente entre empresa comercializadora y empresa
-   distribuidora se refleja en la separación de contratos y facturas, y
-   por tanto, también de elementos y puntos de medida.
+-  Es decir, no pueden utilizarse las lecturas de dos contadores distintos (uno de venta y otro de compra) para componer una única factura.
 
--  Es decir, no pueden utilizarse las lecturas de dos contadores
-   distintos (uno de venta y otro de compra) para componer una única
-   factura.
+-  Este hecho, unido a la necesidad legal de conectar el sistema fotovoltaico en un punto propiedad de la compañía eléctrica (por tanto, externo a las instalaciones eléctricas propias del domicilio, empresa, etc) tiene como consecuencia que en ciertos casos la legalización de un sistema fotovoltaico sea extremadamente complicada.
 
--  Este hecho, unido a la necesidad legal de conectar el sistema
-   fotovoltaico en un punto propiedad de la compañía eléctrica (por
-   tanto, externo a las instalaciones eléctricas propias del domicilio,
-   empresa, etc) tiene como consecuencia que en ciertos casos la
-   legalización de un sistema fotovoltaico sea extremadamente
-   complicada.
+*** Ejemplo: suministro en MT
 
-*** Condiciones técnicas de la conexión
+-  *Titulares con contrato de suministro en Media Tensión con instalaciones fotovoltaicas de potencia menor a 100 kW*
 
--  *Titulares con contrato de suministro en Media Tensión con
-   instalaciones fotovoltaicas de potencia menor a 100 kW. *
+   -  A pesar de que la potencia fotovoltaica es menor que el valor que obliga a la conexión en MT, la otra obligación de conexión en punto propiedad de la compañía eléctrica implica el uso de un transformador BT-MT distinto al usado para consumo.
 
-   -  A pesar de que la potencia fotovoltaica es menor que el valor que
-      obliga a la conexión en MT, la otra obligación de conexión en
-      punto propiedad de la compañía eléctrica implica el uso de un
-      transformador BT-MT distinto al usado para consumo.
+   -  Sin embargo, esta solución conlleva pérdidas energéticas e incremento de inversión de la instalación que la pueden hacer inviable.
 
-   -  Sin embargo, esta solución conlleva pérdidas energéticas e
-      incremento de inversión de la instalación que la pueden hacer
-      inviable.
+   -  La posibilidad de inyectar aguas abajo del transformador de consumo y hacer los balances necesarios en las facturas de venta y consumo, utilizando las medidas de los respectivos contadores es posible bajo el RD 1699/2011.
 
-   -  La posibilidad de inyectar aguas abajo del transformador de
-      consumo y hacer los balances necesarios en las facturas de venta y
-      consumo, utilizando las medidas de los respectivos contadores es
-      posible bajo el RD 1699/2011.
+*** Ejemplo: comunidades de vecinos
 
-*** Condiciones técnicas de la conexión
+-  *Titulares en edificios de varias viviendas*
 
--  *Titulares en edificios de varias viviendas. *
+   -  De nuevo, la necesidad de realizar la conexión aguas arriba al contador de consumo, implica en este caso la instalación de cableado bajante desde la vivienda en cuestión hasta la sala de protecciones del edificio.
 
-   -  De nuevo, la necesidad de realizar la conexión aguas arriba al
-      contador de consumo, implica en este caso la instalación de
-      cableado bajante desde la vivienda en cuestión hasta la sala de
-      protecciones del edificio.
-
-   -  Esta solución no es siempre fácil ni técnicamente (no siempre
-      existe espacio o canalizaciones disponibles en la bajante del
-      edificio) ni administrativamente (es necesario el permiso de la
-      comunidad de vecinos).
+   -  Esta solución no es siempre fácil ni técnicamente (no siempre existe espacio o canalizaciones disponibles en la bajante del edificio) ni administrativamente (es necesario el permiso de la comunidad de vecinos).
 
 * Inversor de CR
 
-*** Conceptos generales
+** Conceptos Generales
+*** Acoplamiento a la red
 
 La potencia suministrada por un generador fotovoltaico iluminado es de
 tensión continua, que debe ser adecuadamente acondicionada para permitir
@@ -292,7 +241,7 @@ el funcionamiento correcto de las cargas conectadas en un sistema
 autónomo o el acoplamiento a la red eléctrica en el caso de sistemas de
 conexión a red.
 
-*** Conceptos generales
+*** Definición
 
 -  El equipo de acondicionamiento de potencia, denominado inversor
    DC/AC, realiza la conversión de continua a alterna cumpliendo con
@@ -303,6 +252,7 @@ conexión a red.
 -  Funciona como fuente de corriente autoconmutada y sincronizada con la
    red.
 
+** Tipos de Inversores
 *** Tipos de inversores
 
 A grandes rasgos, los inversores pueden agruparse en tres categorías:
@@ -313,9 +263,9 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
 -  *Inversor orientado a rama* (/string-inverter/): un inversor dedicado
    a una rama del generador.
 
--  *``Módulo-AC*”: un inversor dedicado a un módulo del generador.
+-  *Módulo-AC*: un inversor dedicado a un módulo del generador.
 
-*** Tipos de inversores
+*** Inversores de Rama
 
 -  Los *inversores orientados a rama* son particularmente útiles en
    algunos sistemas de integración arquitectónica, al poder adaptarse
@@ -325,7 +275,7 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
 -  Los inversores *módulo-AC* deben descartarse en cualquier caso (salvo
    pequeños sistemas demostrativos).
 
-*** Tipos de inversores
+*** Inversores Centrales
 
 -  Los *inversores centrales* son recomendables para instalaciones de
    medio o gran tamaño. Permiten reducir costes (de adquisición,
@@ -335,7 +285,8 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
    del generador* (una planta de 1 MWp debiera contar con 10 inversores
    de 100 kW o 4 de 250 kW, pero no con 200 de 5 kW).
 
-*** Características de un inversor comercial
+** Características básicas
+*** Potencia y ventana MPP
 
 -  *Potencia nominal y máxima*, siendo ésta un porcentaje de sobrecarga
    que el equipo es capaz de soportar durante un determinado período de
@@ -345,7 +296,7 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
    inglesas): es el rango de tensiones en las que el inversor aplica un
    algoritmo de búsqueda del MPP del generador fotovoltaico.
 
-*** Características de un inversor comercial
+*** Tensiones
 
 -  *Tensión máxima de entrada*: es la máxima tensión que el inversor
    puede aguantar sin sufrir una avería.
@@ -359,7 +310,7 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
    ($\si{\watt\per\meter\squared}$) o la potencia de entrada (W)
    necesaria para que el inversor comience el proceso de conversión.
 
-*** Características de un inversor comercial
+*** Eficiencia y Rendimiento
 
 -  *Eficiencia máxima*: máximo valor que toma la relación entre potencia
    de salida y potencia de entrada. En inversores de calidad la
@@ -370,9 +321,8 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
    un inversor que recibe una energía producida por un generador
    fotovoltaico funcionando en unas condiciones de radiación
    características de la zona centroeuropea.
-
-*** Composición
-
+** Composición
+*** Entrada
 [[../figs/InversorPV.pdf]]
 
 -  *Filtro de entrada*: atenúa el rizado que produce la conmutación en
@@ -382,7 +332,7 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
    generador a la tensión necesaria para el puente de conmutación. Puede
    realizar las funciones de búsqueda del punto de máxima potencia.
 
-*** Composición
+*** Puente y salida
 
 [[../figs/InversorPV.pdf]]
 
@@ -395,7 +345,7 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
    de la red y proporciona aislamiento galvánico entre la parte DC y
    AC/. /
 
-*** Composición
+*** Control
 
 [[../figs/InversorPV.pdf]]
 
@@ -405,13 +355,12 @@ A grandes rasgos, los inversores pueden agruparse en tres categorías:
    obtener una señal sinusoidal con bajo contenido en armónicos en la
    salida del inversor.
 
-*** Funcionamiento: modulación SPWM
+** Funcionamiento
+*** Modulación SPWM
 
 [[../figs/SPWMMonofasico.pdf]]
 
 *** Busqueda del Punto de Máxima Potencia
-
-[c]
 
 [[../figs/CurvaIV_Ta20_G800.pdf]]
 
@@ -429,7 +378,7 @@ $$\begin{cases}
       \frac{dI}{dV}=-\frac{I}{V} & V=V_{mpp}\\
       \frac{dI}{dV}<-\frac{I}{V} & V_{mpp}<V<V_{oc}\end{cases}$$
 
-*** Uso del transformador
+*** Transformador de salida
 
 [[../figs/InversorPV.pdf]]
 
@@ -443,9 +392,7 @@ $$\begin{cases}
 -  Establece el aislamiento galvánico entre la entrada del inversor (DC)
    y la salida (AC).
 
-*** Uso del transformador
-
-Opciones comerciales
+*** Opciones comerciales
 
 Existen tres opciones en el mercado de inversores de conexión a red:
 
@@ -455,41 +402,28 @@ Existen tres opciones en el mercado de inversores de conexión a red:
 
 -  Inversores con transformador de alta frecuencia
 
-*** Uso del transformador
+*** Normativa relativa al transformador
 
-Normativa
+La normativa vigente en España obliga al uso de un transformador de aislamiento o elemento equivalente para cumplir tres objetivos:
 
-La normativa vigente en España obliga al uso de un transformador de
-aislamiento o elemento equivalente para cumplir tres objetivos:
-
-1. Aislar la instalación generadora para evitar la transferencia de
-   defectos entre la red y la instalación
+1. Aislar la instalación generadora para evitar la transferencia de defectos entre la red y la instalación
 
 2. Proporcionar seguridad personal
 
 3. Evitar la inyección de corriente continua en la red.
 
-*** Uso del transformador
+*** Normativa: Nota de Interpretación Tecnica
 
-Nota de Interpretación Tecnica
+-  Objetivos 1 y 2 se consiguen mediante la adecuada conexión de masas y tierras en el sistema.
 
--  Objetivos 1 y 2 se consiguen mediante la adecuada conexión de masas y
-   tierras en el sistema.
+-  Objetivo 3: "*la corriente continua inyectada en la red de distribución por una instalación generadora no será superior al 0,5% de la corriente nominal de la misma*", cumplido "*cuando se disponga en la instalación de un transformador separador entre el inversor y el punto de conexión de la red de distribución*". /Los inversores con transformador de alta frecuencia o sin transformador deben demostrar el cumplimiento de este requisito mediante un ensayo descrito en esta nota/.
 
--  Objetivo 3: "*la corriente continua inyectada en la red de
-   distribución por una instalación generadora no será superior al 0,5%
-   de la corriente nominal de la misma*", cumplido "*cuando se disponga
-   en la instalación de un transformador separador entre el inversor y
-   el punto de conexión de la red de distribución*". /Los inversores con
-   transformador de alta frecuencia o sin transformador deben demostrar
-   el cumplimiento de este requisito mediante un ensayo descrito en esta
-   nota/.
-
-*** 'Islanding'
+** Islanding
+*** Definición del problema
 
 [[../figs/Isla.pdf]]
 
-*** 'Islanding'
+*** Ecuaciones básicas
 
 Antes de la desconexión:$$\Delta P=P_{carga}-P_{PV}$$
 
@@ -501,7 +435,7 @@ $$P_{carga}=\frac{V^{2}}{R_{carga}}$$
 
 $$Q_{carga}=\frac{V^{2}}{\omega L}-V^{2}\omega C$$
 
-*** 'Islanding'
+*** Casos posibles
 
 -  $\Delta P^{-}>0\rightarrow P_{carga}>P_{PV}$. Al producirse la
    desconexión, dado que $P_{PV}$ no cambia, disminuye la potencia
@@ -519,16 +453,14 @@ $$Q_{carga}=\frac{V^{2}}{\omega L}-V^{2}\omega C$$
 -  $\Delta Q^{-}<0\rightarrow Q_{carga}<0$. La carga es capacitiva. La
    reactiva debe tender a cero, y por tanto disminuye la frecuencia.
 
-*** 'Islanding'
+*** Ventana de no-detección
 
 Cuando las condiciones de trabajo del generador y el consumo antes de la
 desconexión son muy cercanas, existe una ventana de no-detección.
 
 [[../figs/NDZ.pdf]]
 
-*** 'Islanding'
-
-Estudio experimental IEA-PVPS
+*** Estudio experimental IEA-PVPS
 
 -  La probabilidad de que se de una situación de balance entre consumo y
    generación en una red de Baja Tensión está entre $\num{1e-5}$ y
@@ -538,9 +470,7 @@ Estudio experimental IEA-PVPS
    una desconexión de la red: la probabilidad de ocurrencia simultánea
    de estos dos sucesos es virtualmente nula.
 
-*** 'Islanding'
-
-Estudio experimental IEA-PVPS
+*** Estudio experimental IEA-PVPS
 
 -  El riesgo eléctrico existente en cualquier red eléctrica es del orden
    de $\num{1e-6}$.
